<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Squeeze Client, an Android client for the LMS music server.
  ~ Copyright (c) 2024 Danny Baumann
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the
  ~ GNU General Public License as published by the Free Software Foundation,
  ~ either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program.
  ~ If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<resources>
    <string name="app_name" translatable="false">Squeeze Client</string>
    <string name="item_title_extras">Extras</string>
    <string name="item_title_settings">Settings</string>
    <string name="item_title_advanced_settings">Advanced settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_manage_players">Manage players</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_player_volume">Player volume</string>
    <string name="menu_song_info">Song information</string>
    <string name="now_playing">Now playing</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_save_title">Playlist title</string>
    <string name="menu_playlist_clear">Clear playlist</string>
    <string name="menu_playlist_save">Save playlist</string>
    <string name="player_name_software_player">Software player (%1$s)</string>

    <string name="connection_error_text_no_connection">Connection to server could not be established</string>
    <string name="connection_error_text_no_player">No player is connected to this server</string>
    <string name="connection_error_text_connection_failure">Connection to server failed</string>
    <string name="connection_error_action_retry">Retry</string>
    <string name="connection_error_action_setup_server">Configure server</string>

    <string name="page_title_library_search">Search: \'%1$s\'</string>
    <string name="page_title_radio_search">Radio search: \'%1$s\'</string>

    <string name="action_download">Download</string>
    <string name="action_play">Play</string>
    <string name="action_insert">Play after the current song</string>
    <string name="action_add">Add to playlist</string>

    <string name="search_editor_hint">Search for music\u2026</string>
    <string name="search_category_albums">Albums</string>
    <string name="search_category_artists">Artists</string>
    <string name="search_category_genres">Genres</string>
    <string name="search_category_tracks">Tracks</string>
    <string name="search_category_radio">Radio</string>

    <plurals name="input_length_error_message">
        <item quantity="one">This field must not be left empty.</item>
        <item quantity="other">At least %1$d characters must be present.</item>
    </plurals>
    <string name="input_character_error_message">Only the following characters are allowed: %1$s.</string>
    <string name="input_submit">Submit</string>

    <string name="nowplaying_subtitle">%1$s · %2$d of %3$d</string>
    <string name="nowplaying_empty_playlist">Empty playlist</string>

    <string name="notif_action_player_power">Player power</string>
    <string name="notif_action_disconnect">Disconnect</string>

    <string name="media_notification_channel_name">Media control</string>

    <string name="download_notification_channel_name">Download</string>
    <string name="download_notification_channel_description">Used for notifications reporting download progress</string>
    <string name="download_notification_title">Downloading song %1$d of %2$d</string>
    <string name="download_notification_action_cancel">Cancel</string>
    <string name="download_failure_notification_title">Song download failed</string>
    <plurals name="download_failure_notification_text">
        <item quantity="one">1 song could not be downloaded</item>
        <item quantity="other">%d songs could not be downloaded</item>
    </plurals>
    <string name="download_failure_notification_action_retry">Retry download</string>
    <string name="permission_rationale_title">Permission required</string>
    <string name="download_permission_rationale_message">Downloading songs requires notification permission to inform about the download progress.</string>
    <string name="download_permission_rationale_cancel">Cancel download</string>
    <string name="permission_rationale_allow">Allow</string>

    <string name="local_player_notification_title_disconnected">Local player disconnected</string>
    <string name="local_player_notification_title_stopped">Local player ready</string>
    <string name="local_player_notification_title_playing">Local player playing</string>
    <string name="local_player_notification_channel_name">Local playback</string>
    <string name="local_player_notification_channel_description">Used for local player state notifications</string>
    <string name="local_player_notification_content_disconnected">Trying to connect to %1$s</string>
    <string name="local_player_notification_content_stopped">Connected to server</string>
    <string name="local_player_notification_content_playing">Playing</string>
    <string name="local_player_notification_content_playing_title">Playing \'%1$s\'</string>
    <string name="local_player_notification_permission_rationale_message">Local playback requires notification permission to inform about the state of the background player.</string>
    <string name="local_player_notification_permission_rationale_cancel">Cancel</string>

    <string name="server_setup_title">Server setup</string>
    <string name="server_scanning">Scanning for servers\u2026</string>
    <string name="server_choose_hint">Choose server</string>
    <string name="server_address_hint">Server name or IP address</string>
    <string name="server_user_hint">User name (optional)</string>
    <string name="server_password_hint">Password (optional)</string>
    <string name="server_connect">Connect</string>
    <string name="server_enter_manually">Manually enter server details</string>
    <string name="server_address_error">%1$s is not a valid server address</string>
    <string name="server_creds_error">If a user name is present, a password must also be present</string>

    <string name="player_management_title">Players</string>

    <string name="settings_title">Settings</string>
    <string name="settings_category_playback">Playback</string>
    <string name="settings_category_display">Display</string>
    <string name="settings_category_download">Download</string>
    <string name="settings_category_local_player">Local playback</string>
    <string name="settings_category_default_player">Default player</string>
    <string name="settings_default_player_title">Default player</string>
    <string name="settings_default_player_summary_none">None selected</string>
    <string name="settings_only_control_default_player_title">Only control default</string>
    <string name="settings_only_control_default_player_summary">Only show, and control, the default player (as configured above).</string>
    <string name="settings_category_android_auto">Android Auto</string>
    <string name="settings_aa_preset_button_count_title">Preset buttons</string>
    <string name="settings_aa_preset_button_count_summary_disabled">Disabled</string>
    <plurals name="settings_aa_preset_button_count_summary">
        <item quantity="one">Show 1 preset button</item>
        <item quantity="other">Show %d preset buttons</item>
    </plurals>
    <string name="settings_local_player_enabled_title">Use device as player</string>
    <string name="settings_local_player_enabled_summary">Enable playback on this device by advertising it as player towards the server</string>
    <string name="settings_local_player_volume_mode_title">Volume control mode</string>
    <string name="settings_volume_buttons_title">Volume control</string>
    <string name="settings_volume_buttons_summary">Use device volume buttons to control player volume</string>
    <string name="settings_volume_step_size_title">Volume step size</string>
    <string name="settings_volume_step_size_summary">One volume button press changes device volume by %d%%.</string>
    <string name="settings_fade_in_seconds_title">Fade in duration</string>
    <string name="settings_fade_in_seconds_summary_disabled">Disabled</string>
    <plurals name="settings_fade_in_seconds_summary">
        <item quantity="one">1 second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_follow_battery_saver">Follow battery saver</string>
    <string name="settings_theme_follow_system">Follow system</string>
    <string name="settings_force_grid_title">Always show list items as grid</string>
    <string name="settings_force_grid_summary_off">Show lists of images (albums, titles etc.) arranged in list or grid form, depending on device size and orientation.</string>
    <string name="settings_force_grid_summary_on">Always show lists of images (albums, titles etc.) arranged in grid form.</string>
    <string name="settings_show_over_lock_screen_title">Show over lock screen</string>
    <string name="settings_show_over_lock_screen_summary">If the app is the current app when the screen locks, show it directly instead of the PIN/pattern screen.</string>
    <string name="settings_download_path_structure_title">Folder hierarchy</string>
    <string name="settings_download_path_structure_entry_as_server">As stored on server</string>
    <string name="settings_download_path_structure_entry_album">Album</string>
    <string name="settings_download_path_structure_entry_artist">Artist</string>
    <string name="settings_download_path_structure_entry_album_under_artist">Artist/Album</string>
    <string name="settings_download_path_structure_entry_artist_album">Artist - Album</string>
    <string name="settings_local_player_volume_mode_player_only">In-app only</string>
    <string name="settings_local_player_volume_mode_device">Use device volume</string>
    <string name="settings_local_player_volume_mode_device_while_playing">Device volume while playing</string>
    <string name="settings_local_player_volume_mode_summary_player_only">Server side volume only controls the in-app player. Final volume will depend on server volume and media volume set on device.</string>
    <string name="settings_local_player_volume_mode_summary_device">Server side volume controls the device media volume. The volume set thus will also affect other apps.</string>
    <string name="settings_local_player_volume_mode_summary_device_while_playing">Server side volume controls the device media volume during playback. When playback ends, volume is restored to its state at playback start.</string>
</resources>