<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Squeeze Client, an Android client for the LMS music server.
  ~ Copyright (c) 2024 Danny Baumann
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the
  ~ GNU General Public License as published by the Free Software Foundation,
  ~ either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program.
  ~ If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_category_display">

        <ListPreference
            android:key="app_theme"
            android:title="@string/settings_theme_title"
            android:entries="@array/settings_theme_entries"
            android:entryValues="@array/settings_theme_values"
            android:defaultValue="system"
            android:summary="%s"/>

        <SwitchPreferenceCompat
            android:key="force_list_grid"
            android:title="@string/settings_force_grid_title"
            android:summaryOn="@string/settings_force_grid_summary_on"
            android:summaryOff="@string/settings_force_grid_summary_off"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="show_over_lock_screen"
            android:title="@string/settings_show_over_lock_screen_title"
            android:summary="@string/settings_show_over_lock_screen_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_playback">

        <SwitchPreferenceCompat
            android:key="use_volume_buttons"
            android:title="@string/settings_volume_buttons_title"
            android:summary="@string/settings_volume_buttons_summary"
            android:defaultValue="true" />

        <SeekBarPreference
            android:key="volume_step_size"
            android:title="@string/settings_volume_step_size_title"
            android:defaultValue="5"
            app:min="1"
            android:max="10"
            app:updatesContinuously="true" />

        <SeekBarPreference
            android:key="fade_in_duration"
            android:title="@string/settings_fade_in_seconds_title"
            android:defaultValue="0"
            app:min="0"
            android:max="10"
            app:updatesContinuously="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_download">

        <ListPreference
            android:key="download_path_structure"
            android:title="@string/settings_download_path_structure_title"
            android:entries="@array/settings_download_path_structure_entries"
            android:summary="%s" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_local_player">

        <SwitchPreferenceCompat
            android:key="local_player_enabled"
            android:title="@string/settings_local_player_enabled_title"
            android:summary="@string/settings_local_player_enabled_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="local_player_volume_mode"
            android:title="@string/settings_local_player_volume_mode_title"
            android:entries="@array/settings_local_player_volume_mode_entries"
            android:entryValues="@array/settings_local_player_volume_mode_values"
            android:defaultValue="devicewhileplaying" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_default_player">

        <ListPreference
            android:key="default_player"
            android:title="@string/settings_default_player_title"
            android:summary="%s" />

        <SwitchPreferenceCompat
            android:key="only_control_default_player"
            android:title="@string/settings_only_control_default_player_title"
            android:summary="@string/settings_only_control_default_player_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_android_auto">

        <SeekBarPreference
            android:key="aa_preset_button_count"
            android:title="@string/settings_aa_preset_button_count_title"
            android:defaultValue="0"
            app:min="0"
            android:max="5"
            app:updatesContinuously="true" />

    </PreferenceCategory>

</PreferenceScreen>